fix: spacing footer header 1 header 2 hover active

--- a/src/footer/Footer.scss
+++ b/src/footer/Footer.scss
@@ -1,43 +1,58 @@
 #custom-footer {
-  padding: 2.75rem 11.56rem 1rem;
   font-size: 1rem;
   font-style: normal;
   font-weight: 400;
   line-height: 150%; /* 1.5rem */
-
+  padding: 2rem 0;
   .footer-container {
+    margin: 0 auto;
+
+    width: 67.25rem;
     display: grid;
     grid-template-columns: 3.5fr 1fr 1fr 1fr;
     align-items: start;
-    gap: 1rem;
+    gap: 2rem;
 
     .footer-section {
       .footer-section-logo {
         display: block;
-        padding: 0.25rem 0.5rem;
+        margin-right: 2.5rem;
+        margin-bottom: 1rem;
       }
 
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      gap: 0.88rem;
 
       .footer-section-location,
       .footer-section-email,
       .footer-section-phone {
-        margin-bottom: 0;
-        padding: 0.62rem 0;
+        color: var(--color-text-default);
+        font-feature-settings: "clig" off, "liga" off;
+        font-family: Roboto;
+        font-size: 1rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 150%;
+        margin-bottom: 1rem;
         display: flex;
         align-items: center;
-        gap: 0.62rem;
+        column-gap: 0.5rem;
+      }
+      .footer-section-phone {
+        margin-bottom: 0;
       }
 
       h3 {
-        padding: 0;
-        margin: 0;
+        color: var(--color-text-default);
+        font-feature-settings: "clig" off, "liga" off;
+
+        font-family: Roboto;
         font-size: 1.25rem;
         font-style: normal;
-        font-weight: 700;
+        font-weight: 500;
+        line-height: 150%;
+        margin-bottom: 0.5rem;
       }
 
       ul {
@@ -47,10 +62,16 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        gap: 0.88rem;
+        gap: 0.5rem;
 
         li {
           & a {
+            font-feature-settings: "clig" off, "liga" off;
+
+            font-family: Roboto;
+            font-size: 1rem;
+            font-style: normal;
+            font-weight: 400;
             color: var(--color-text-default);
             text-decoration: none;
             transition: all 0.2s ease;
@@ -65,11 +86,19 @@
   }
 
   .footer-bottom {
-    margin-top: 3rem;
+    width: 67.25rem;
+    margin: 0 auto;
     p {
-      margin: 0;
+      margin-top: 1.25rem;
       padding: 0;
+      color: var(--color-text-default);
+      font-feature-settings: "clig" off, "liga" off;
+
+      font-family: Roboto;
+      font-size: 1rem;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 150%;
     }
-    margin-bottom: 4rem;
   }
 }
